add manual sync
